# 2026-04-09-edh-sig

./: README.md  pyproject.toml  zarr-and-kerchunk.ipynb
data/daymet-daily-v4/: README.md
data/daymet-daily-v4/region-hi/: daymet_v4_daily_hi_dayl_1990.nc  daymet_v4_daily_hi_dayl_1991.nc  daymet_v4_daily_hi_dayl_1992.nc  daymet_v4_daily_hi_dayl_1993.nc  daymet_v4_daily_hi_dayl_1994.nc  daymet_v4_daily_hi_dayl_1995.nc  daymet_v4_daily_hi_dayl_1996.nc  daymet_v4_daily_hi_dayl_1998.nc  daymet_v4_daily_hi_dayl_1999.nc
scripts/: kerchunk-daymet-v4.py
