[project]
name = "2026-04-09-edh-sig"
version = "0.1.0"
description = "Material for EDH SIG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2026.3.0",
    "dcachefs>=0.2.0",
    "fsspec>=2026.3.0",
    "gcsfs>=2026.3.0",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "jupyterlab>=4.5.6",
    "kerchunk>=0.2.10",
    "matplotlib>=3.10.8",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.4",
    "rich>=14.3.3",
    "xarray>=2026.2.0",
    "zarr>=3.1.6",
]
